# iggyc

./: .env  Cargo.toml
src/: consume_messages.rs  consume_messages_and_email.rs  main.rs
src/config/: email.rs  mod.rs  smtp.rs
src/email/: sender.rs
src/messaging/: consumer.rs  payload.rs
