[package]
name = "iggyc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.92"
futures = "0.3.31"
futures-util = "0.3.31"
iggy = "0.6.31"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
